fixed off-center card

--- a/src/components/material/spinner/spinner.css
+++ b/src/components/material/spinner/spinner.css
@@ -1,4 +1,5 @@
 .spinner {
   margin-top: 20%;
-  margin-left: -7% !important;
+
+  margin-bottom: 20%;
 }
